--- a/assets/scss/structure/_layout.scss
+++ b/assets/scss/structure/_layout.scss
@@ -9,6 +9,15 @@
 }
 
 // Content Page
+.content-homepage {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    min-height: calc(100vh - #{calc($topbar-height + 1px)});
+    transition: $transition-base;
+}
+
+// Content Page
 .content-page {
     display: flex;
     flex-direction: column;
